ensure one template row has 875 width on tablet

--- a/express/code/scripts/widgets/basic-carousel.css
+++ b/express/code/scripts/widgets/basic-carousel.css
@@ -294,6 +294,10 @@
     scroll-snap-type: x mandatory;
   }
 
+  .template-list.horizontal-fullwidth.one.basic-carousel .basic-carousel-container .basic-carousel-platform a {
+    margin-left: 0;
+    margin-right: 0;
+  }
   .template-list.horizontal-fullwidth.four-rectangle.basic-carousel .basic-carousel-container .basic-carousel-platform a,
   .template-list.horizontal-fullwidth.four-square.basic-carousel .basic-carousel-container .basic-carousel-platform a {
     margin-right: 0;
@@ -311,8 +315,8 @@
   }
   /* basic carousel template img */
   .template-list.horizontal-fullwidth.one.basic-carousel .basic-carousel-container .basic-carousel-platform a picture img {
-    width: 895px;
-    height: 895px;
+    width: 875px;
+    height: 875px;
   }
   .template-list.horizontal-fullwidth.three.basic-carousel .basic-carousel-container .basic-carousel-platform a picture img {
     width: 280px;
@@ -328,7 +332,8 @@
   }
   /* basic carousel platform */
   .template-list.horizontal-fullwidth.one.basic-carousel .basic-carousel-container .basic-carousel-platform {
-    height: 895px;
+    width: 875px;
+    height: 865px;
   }
   .template-list.horizontal-fullwidth.three.basic-carousel .basic-carousel-container .basic-carousel-platform {
     height: 155px
